--- a/index.html
+++ b/index.html
@@ -178,25 +178,61 @@
     </div>
 </section>
 <!-- review part -->
-<section >
+<section  class="mx-16 pb-10">
+    <!--  review heading -->
     <div class="justify-center text-center">
         <h1 class="font-bold text-6xl">Some Students Feedback </h1>
         <p class="pt-2 text-2xl pb-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, labore.</p>
         </div>
-        <div>
-            <div class="flex justify-between mx-20">
-                <img src="images/comma.png" alt="">
-                <div>
-                    <i class="fa-solid fa-star text-orange-600"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
+        <!-- review part -->
+        <div class="flex">
+            <!-- one -->
+            <div class=" mx-20">
+                <div class="flex justify-between">
+                    <img class="" src="images/comma.png" alt="">
+                    <div>
+                        <i class="fa-solid fa-star text-orange-600"></i>
+                        <i class="fa-solid fa-star text-orange-600"></i>
+                        <i class="fa-solid fa-star text-orange-600"></i>
+                        <i class="fa-solid fa-star text-orange-600"></i>
+                        <i class="fa-solid fa-star text-orange-600"></i>
+                    </div>
+                </div>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+                <div class="flex"> 
+                    <img class="w-14 rounded-full" src="images/student/student-1.png" alt="">
+                    <div class="pl-3">
+                        <h1>Awlad Hossain</h1>
+                        <p>UI Designer</p>
+                    </div>
                 </div>
             </div>
-            <p></p>
-            <div></div>
+            <!-- two -->
+             <div class=" mx-20">
+                <div class="flex justify-between">
+                    <img src="images/comma.png" alt="">
+                    <div>
+                        <i class="fa-solid fa-star text-orange-600"></i>
+                        <i class="fa-solid fa-star text-orange-600"></i>
+                        <i class="fa-solid fa-star text-orange-600"></i>
+                        <i class="fa-solid fa-star text-orange-600"></i>
+                        <i class="fa-solid fa-star text-orange-600"></i>
+                    </div>
+                </div>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+                <div class="flex"> 
+                    <img class="w-14 rounded-full" src="images/student/student-1.png" alt="">
+                    <div class="pl-3">
+                        <h1>Awlad Hossain</h1>
+                        <p>UI Designer</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+
+
+       
 </section>
 </body>
 </html>
